[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "day_01p1"
path = "src/day_01p1/prog.rs"

[[bin]]
name = "day_01p2"
path = "src/day_01p2/prog.rs"

[[bin]]
name = "day_02p1"
path = "src/day_02p1/prog.rs"

[[bin]]
name = "day_02p2"
path = "src/day_02p2/prog.rs"

[[bin]]
name = "day_03p1"
path = "src/day_03p1/prog.rs"

[[bin]]
name = "day_03p2"
path = "src/day_03p2/prog.rs"

[[bin]]
name = "day_04p1"
path = "src/day_04p1/prog.rs"

[[bin]]
name = "day_04p2"
path = "src/day_04p2/prog.rs"

[[bin]]
name = "day_05p1"
path = "src/day_05p1/prog.rs"

[[bin]]
name = "day_05p2"
path = "src/day_05p2/prog.rs"

# gap, did not do these days yet

[[bin]]
name = "day_13p1"
path = "src/day_13p1/prog.rs"

[[bin]]
name = "day_13p2"
path = "src/day_13p2/prog.rs"

[[bin]]
name = "day_14p1"
path = "src/day_14p1/prog.rs"

[[bin]]
name = "day_14p2"
path = "src/day_14p2/prog.rs"

[[bin]]
name = "day_15p1"
path = "src/day_15p1/prog.rs"

[[bin]]
name = "day_15p2"
path = "src/day_15p2/prog.rs"

[[bin]]
name = "day_16p1"
path = "src/day_16p1/prog.rs"

[[bin]]
name = "day_16p2"
path = "src/day_16p2/prog.rs"

[[bin]]
name = "day_17p1"
path = "src/day_17p1/prog.rs"

[[bin]]
name = "day_17p2"
path = "src/day_17p2/prog.rs"

[[bin]]
name = "day_18p1"
path = "src/day_18p1/prog.rs"

[[bin]]
name = "day_18p2"
path = "src/day_18p2/prog.rs"

[[bin]]
name = "day_19p1"
path = "src/day_19p1/prog.rs"

[[bin]]
name = "day_19p2"
path = "src/day_19p2/prog.rs"

[[bin]]
name = "day_20p1"
path = "src/day_20p1/prog.rs"

[[bin]]
name = "day_20p2"
path = "src/day_20p2/prog.rs"

[[bin]]
name = "day_21p1"
path = "src/day_21p1/prog.rs"

[[bin]]
name = "day_21p2"
path = "src/day_21p2/prog.rs"

[[bin]]
name = "day_21p2_helper"
path = "src/day_21p2/helper.rs"
